// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`<CurrentPhase /> render: section role - action 1`] = `
<section
  aria-label="current phase"
  class="currentPhase"
  role="region"
>
  <div
    class="heading"
  >
    <span
      aria-label="player's turn"
      class="turn player"
      role="img"
    />
    <h1>
      Action
    </h1>
  </div>
  <div
    class="content"
  >
    <article
      aria-disabled="true"
      aria-label="card player_move_1"
      aria-pressed="false"
      class="card active actionCard player"
    >
      <div
        class="heading"
      >
        <div
          class="icon"
        />
        <div
          class="title title"
        >
          Move
        </div>
      </div>
      <div
        class="content"
      >
        <div
          class="text paragraph"
        >
          <p>
            Move up to two different Units
          </p>
        </div>
        <div
          class="waterMark"
        />
      </div>
    </article>
    <button
      class="button disabled"
      disabled=""
    >
      Skip
    </button>
  </div>
</section>
`;

exports[`<CurrentPhase /> render: section role - planification 1`] = `
<section
  aria-label="current phase"
  class="currentPhase"
  role="region"
>
  <div
    class="heading"
  >
    <span
      aria-label="player's turn"
      class="turn player"
      role="img"
    />
    <h1>
      Planning
    </h1>
  </div>
  <div
    class="content"
  >
    <article
      aria-disabled="true"
      aria-label="card silhouette next"
      class="card silhouette"
    >
      <div
        class="heading"
      >
        <h3
          class="title title"
        >
          next
        </h3>
      </div>
      <div
        class="content"
      />
    </article>
    <article
      aria-disabled="true"
      aria-label="card silhouette future"
      class="card silhouette"
    >
      <div
        class="heading"
      >
        <h3
          class="title title"
        >
          future
        </h3>
      </div>
      <div
        class="content"
      />
    </article>
    <button
      class="button disabled player"
      disabled=""
    >
      Confirm plan
    </button>
  </div>
</section>
`;

exports[`<CurrentPhase /> render: section role - planification with cards 1`] = `
<section
  aria-label="current phase"
  class="currentPhase"
  role="region"
>
  <div
    class="heading"
  >
    <span
      aria-label="player's turn"
      class="turn player"
      role="img"
    />
    <h1>
      Planning
    </h1>
  </div>
  <div
    class="content"
  >
    <article
      aria-disabled="false"
      aria-label="card player_move_2"
      aria-pressed="false"
      class="card available actionCard player"
    >
      <div
        class="heading"
      >
        <div
          class="icon"
        />
        <div
          class="title title"
        >
          Move
        </div>
      </div>
      <div
        class="content"
      >
        <div
          class="text paragraph"
        >
          <p>
            Move up to two different Units
          </p>
        </div>
        <div
          class="waterMark"
        />
      </div>
    </article>
    <article
      aria-disabled="false"
      aria-label="card player_recruit_1"
      aria-pressed="false"
      class="card available actionCard player"
    >
      <div
        class="heading"
      >
        <div
          class="icon"
        />
        <div
          class="title title"
        >
          Recruit
        </div>
      </div>
      <div
        class="content"
      >
        <div
          class="text paragraph"
        >
          <p>
            Recruit units at up to two different Settlements
          </p>
        </div>
        <div
          class="waterMark"
        />
      </div>
    </article>
    <button
      class="button player"
    >
      Confirm plan
    </button>
  </div>
</section>
`;
